fix: support LocalDate deserialization with @JsonFormat in ScheduleDTO